crates/strider-analyze/tests/snapshots/v3__arm_thumb__control__early_return.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v7" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v7" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v8" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v8" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v11" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v11" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v13" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "12" -> "v13" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v14" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "12" -> "v14" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "10" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "12" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "16" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v17" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "16" -> "v17" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "16" -> "v11" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v14" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "19" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v17" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "22" -> "19" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "23" -> "19" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "24" -> "19" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "24" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="φ r0", shape=house, fillcolor="#163030"];
  "10" -> "25" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "21" -> "25" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "27" [label="φ r0", shape=house, fillcolor="#163030"];
  "5" -> "27" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "30" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0xfffffffa:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v7" -> "33" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v13" -> "33" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "34" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "33" -> "34" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "34" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" -> "34" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "23" -> "34" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "24" -> "34" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "15" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "28" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "36" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "41" -> "40" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "41" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "28" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "43" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "28" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "28" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="And:bool", shape=box, fillcolor="#2d2d2d"];
  "46" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "39" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "36" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
}
